# shdw-pckg

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
shdw/: __init__.py
